--- a/motion/stytle/style.css
+++ b/motion/stytle/style.css
@@ -115,6 +115,23 @@ main {
   background-color: dimgray;
 }
 
+.content_box {
+  display: grid;
+  width: 100%;
+  height: 120px;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: darkgrey;
+}
+img {
+  width: 180px;
+  height: 120px;
+}
+
+.cnt {
+  display: block;
+  align-self: center;
+}
+
 footer {
   height: 5%;
   width: 100%;
